--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "dating-app",
-    "slug": "dating-app",
+    "name": "Swipe",
+    "slug": "Swipe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -22,8 +22,10 @@
       },
       "edgeToEdgeEnabled": true
     },
+    "scheme": "Swipe",
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
